--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dhruv_portfolio",
-  "homepage": "https://dhruvbhatia14.github.io/",
+  "homepage": "https://dhruvbhatia14.github.io/react-gh-pages",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
